--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "private": true,
   "dependencies": {
+    "@mozilla/readability": "^0.6.0",
     "axios": "^1.11.0",
     "dotenv": "^17.2.1",
     "firebase-admin": "^13.4.0",
+    "jsdom": "^26.1.0",
     "xml2js": "^0.6.2"
   }
 }
