--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^17.2.1",
     "firebase-admin": "^13.4.0",
     "jsdom": "^26.1.0",
+    "nodemailer": "^7.0.6",
     "xml2js": "^0.6.2"
   }
 }
